# Algos-1sem

./: .gitignore
1-hamurabi/: CMakeLists.txt  HamurabiGame.cppm  README.md  main.cpp
2-array/: CMakeLists.txt  README.md  main.cpp  valarray.hpp
3-sort/: CMakeLists.txt  HoarePart_vs_Insertion.xlsx  Tests-HoarePartMedianPivotRecursionOptimized.html  Tests-LomutoPartLastPivot.html  insertion_sort_times.csv  main.cpp  quick_sort_times.csv  sort.hpp
3-sort/stats/: HoarePart_vs_Insertion-WorstCase.xlsx  Tests-HoarePartFirstPivot.html  Tests-HoarePartMedianPivot.html  Tests-HoarePartMedianPivotRecursionOptimized-O3.html  Tests-LomutoPartMedianPivot.html  Tests-LomutoPartMedianPivotRecursionOptimized-O3.html  largersize.xlsx
4-1-dice/: CMakeLists.txt  dice.cpp  dice.hpp  main.cpp
4-1-dice/test_results/: 1d10.csv  1d6.csv  2d10.csv  2d6.csv  3d10.csv  3d6.csv  ProbabilityGraphs_1000samples.xlsx
